# Piscine_Python

00/ex00/: Hello.py
00/ex01/: format_ft_time.py
00/ex02/: find_ft_type.py  test.py  tester.py
00/ex03/: NULL_not_found.py  test.py  tester.py
00/ex04/: whatis.py
00/ex05/: building.py
00/ex06/: filterstring.py  ft_filter.py
00/ex07/: sos.py  tester.py
00/ex08/: Loading.py  tester.py
00/ex09/: LICENSE  README.md  pyproject.toml  test_script.py
00/ex09/ft_package/: __init__.py  __main__.py
